federation-stack/templates/idp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: idp
spec:
  selector:
    app: idp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
