federation-stack/templates/ldap-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap
spec:
  selector:
    app: ldap
  ports:
    - name: ldap
      port: 389
      targetPort: 389
