federation-stack/templates/mds-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mds
spec:
  selector:
    app: mds
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
