federation-stack/templates/protected-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: protected-service
spec:
  selector:
    app: protected-service
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
