federation-stack/templates/sp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sp
spec:
  selector:
    app: sp
  ports:
    - port: 80
      targetPort: 80
